themes: constrain IncreasedContrastThemeSupplier to refresh-only

The inverted background tab design doesn't work at all with pre-Refresh tabs.

Bug: 870844
Change-Id: I598b92ed8d6e8fa8b586166fb7352df1d13c8360
Reviewed-on: https://chromium-review.googlesource.com/1163316
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581361}
Former-commit-id: 188f2595a21350b8b1e3a194bf417fbdb47fdaf9